# bhumi_ai

./: .env  .gitignore  DEPLOYMENT_SUCCESS.md  INTERACTIVE_FRONTEND_READY.md  README.md  SETUP_GUIDE.md  requirements.txt  start_all.sh  stop_all.sh  test_integration.py
agricultural_orchestrator/: .env  README.md  __init__.py  __main__.py  agent.py  agent_executor.py  agricultural_tools.py  conversation_helper.py  conversation_utils.py  gradio.py  gradio_OnlyAgents_No_Multimodal.py  gradio_agent_plus_gemini.py  gradio_app.py  mongo_config.py  payload_processor.py  pyproject.toml  remote_agent_manager.py  requirements.txt  run.sh
frontend/: .env  PDF_FUNCTIONALITY.md  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/speech-to-text/: route.ts
frontend/src/app/fixed/: page.tsx
frontend/src/app/simple/: page.tsx
frontend/src/app/test/: page.tsx
frontend/src/app/test-pdf/: page.tsx
frontend/src/app/working/: page.tsx
frontend/src/components/chat/: AudioRecorder.tsx  ChatInput.tsx  ChatInterface.tsx  ImageUpload.tsx  MessageBubble.tsx  SimpleChat.tsx
frontend/src/components/ui/: Button.tsx  LoadingSpinner.tsx
frontend/src/lib/: orchestrator.ts  utils.ts
frontend/src/services/: imageDescription.ts  pdfTextExtraction.ts  speechToText.ts
frontend/src/types/: chat.ts
market_agent_adk/: .env  CONVERSATION_INTEGRATION.md  README.md  __init__.py  __main__.py  agent.py  agent_executor.py  conversation_helper.py  custom_request_handler.py  logging_config.py  mongo_config.py  pyproject.toml  simple_query.py  test_conversation.py
schemes_rag_agent/: README.md  __main__.py  agent_card.py  agent_executor.py  client_example.py  config.py  conversation_helper.py  custom_request_handler.py  env.example  logging_config.py  main.py  mongo_manager.py  pinecone_manager.py  rag_agent.py  requirements.txt  run.sh  simple_query.py  start_server.py  test_unified_rag.py
weather_agent_adk/: .env  README.md  __init__.py  __main__.py  agent.py  agent_executor.py  conversation_helper.py  conversation_utils.py  custom_request_handler.py  gradio_app.py  logging_config.py  mongo_config.py  pyproject.toml  request_context.py  requirements.txt  simple_query.py  test_client.py
(+2 files in other folders)
